fixed the double scroll

--- a/css/style.css
+++ b/css/style.css
@@ -690,4 +690,6 @@ hr {
         margin-left: 0;
         margin-top: 10px;
     }
-
+    .closeMainNav{
+      display: none;
+    }
